v0.2.1
* hot fix for AfkBooter
  - added config option for move tracking
  - turned off move tracking by default
  - increased time for move tracking to 1 min delay and 30 sec check

v0.2.0
* add -a option to hatme
* add AfkBooter
* update to bukkit 1.1-R3
* remove SNAPSHOT from jar name
* add who
* add mobcontrol

v0.1.0
* add antiSlime
* add timezone
* add lockdown
* add endernerf
* add gamemode
* add mentorTeleport
* add pigjouster
* add reservelist
* add wolftrade
* add hatme