@@ -3,6 +3,7 @@ v0.2.1
   - added config option for move tracking
   - turned off move tracking by default
   - increased time for move tracking to 1 min delay and 30 sec check
+  - added afkbooter debugon|debugoff command
 
 v0.2.0
 * add -a option to hatme
